<resources>
    <string name="app_name">PDD Test app</string>
    <string name="welcome_text_view_welcome_fragment">Здравствуйте!</string>
    <string name="start_button_welcome_fragment">Начать тестирование</string>
    <string name="rules_dialog_fragment">На теоретический экзамен отводится 20 минут.
        Допускается сделать две ошибки. За каждую ошибку будет добавлено пять дополнительных
    вопросов.</string>
    <string name="title_dialog_fragment">Обратите внимание!</string>
    <string name="positive_button_dialog_fragment">Ок</string>
    <string name="progress_text_view_test_fragment">Всего вопросов: %s, осталось вопросов: %s, количество ошибок: %s</string>
    <string name="accept_answer_button_test_fragment">Принять ответ</string>
    <string name="retry">Попробовать снова</string>
    <string name="mistakes_text_view_test_result_fragment">Количество ошибок: %s</string>
    <string name="true_answers_text_view_test_result_fragment">Количество правильных ответов: %s</string>
    <string name="all_answers_text_view_test_result_fragment">Всего вопросов: %s</string>
    <string name="result_content_description">Результат тестирования</string>
    <string name="image_of_question">image_content_description_test_fragment</string>

</resources>