<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.TestFragment">

    <TextView
        android:id="@+id/progressTextViewTestFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/progress_text_view_test_fragment"/>

    <TextView
        android:id="@+id/questionTextViewTestFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/progressTextViewTestFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/rules_dialog_fragment"/>

    <ImageView
        android:id="@+id/imageTestFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/questionTextViewTestFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/pic_question_2"
        android:contentDescription="@string/image_of_question" />

    <androidx.cardview.widget.CardView
        android:id="@+id/answerOneCardViewTestFragment"
        style="@style/myCardViewStyle"
        app:layout_constraintTop_toBottomOf="@id/imageTestFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/answerOneTextViewTestFragment"
            style="@style/answerTextViewStyle"
            tools:text="@string/true_answers_text_view_test_result_fragment" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/answerTwoCardViewTestFragment"
        style="@style/myCardViewStyle"
        app:layout_constraintTop_toBottomOf="@id/answerOneCardViewTestFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/answerTwoTextViewTestFragment"
            style="@style/answerTextViewStyle"
            tools:text="@string/true_answers_text_view_test_result_fragment" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/answerThreeCardViewTestFragment"
        style="@style/myCardViewStyle"
        app:layout_constraintTop_toBottomOf="@id/answerTwoCardViewTestFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/answerThreeTextViewTestFragment"
            style="@style/answerTextViewStyle"
            tools:text="@string/true_answers_text_view_test_result_fragment" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/answerFourCardViewTestFragment"
        style="@style/myCardViewStyle"
        app:layout_constraintTop_toBottomOf="@id/answerThreeCardViewTestFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/answerFourTextViewTestFragment"
            style="@style/answerTextViewStyle"
            tools:text="@string/true_answers_text_view_test_result_fragment" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/acceptButtonTestFragment"
        app:layout_constraintBottom_toTopOf="@id/timerTextViewTestFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/grey_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_answer_button_test_fragment"
        android:textColor="@color/black"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/timerTextViewTestFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        tools:text="00:00"/>


</androidx.constraintlayout.widget.ConstraintLayout>